--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>vue-todo</title><link href=/css/app.a08049ea.css rel=preload as=style><link href=/js/app.96694080.js rel=preload as=script><link href=/js/chunk-vendors.1515a8be.js rel=preload as=script><link href=/css/app.a08049ea.css rel=stylesheet></head><body><noscript><strong>We're sorry but vue-todo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.1515a8be.js></script><script src=/js/app.96694080.js></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>首页</title>
+</head>
+<body>
+    测试测试我的小店
+</body>
+</html>
